menambah action page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ rel="stylesheet"
     </div>
     <div id="contact">
         <p ><strong>Contact Me</strong></p>
-        <form action="/action_page.php" target="_blank">
+        <form action="action_page.html" target="_blank">
           <p><input type="text" placeholder="Name" required name="Name"></p>
           <textarea name="messasge" id="message-input" cols="30" rows="10" placeholder="Message"></textarea>
           <p><button type="submit">SEND MESSAGE</button></p>
